# chatapp

./: README.md  pyproject.toml
CoreApp/: urls.py
CoreApp/settings/: base.py
accounts/: admin.py  mail.py  manager.py  models.py  permissions.py  serializers.py  services.py  token.py  tokens.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers_alter_customuser_email_and_more.py  0003_alter_customuser_username.py  0004_alter_customuser_username.py  0005_customuser_email_is_verified_and_more.py  0006_customuser_social_type.py
coreapp/: urls.py
coreapp/settings/: base.py  development.py
